Buildpacks-Nodejs-Simple/deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nodejs-simple
  namespace: buildpacks-nodejs-simple
  labels:
    Build-Name: Buildpacks-Nodejs-Simple
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  selector:
    app: nodejs-simple
